# self-debug

./: .env.sample  .gitignore  README.md  dev.py  main.py  pyproject.toml  requirements.txt  stack_overflow.py
scripts/: docker_compose.sh
src/: code_generator.py  initial_generator.py  utils.py
src/dataset/: __init__.py  ds1000.py  ds1000_requirements.txt  minio_helper.py  stack_overflow.py
src/index/: stack_overflow.py
src/llm/: __init__.py
