[tool.poetry]
authors = ["tqtensor <victortang212@gmail.com>"]
description = "SelfDebug with LLMs"
name = "self-debug"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
gdown = "^5.1.0"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
python = "~3.10"
pyzstd = "^0.15.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
toml-sort = "^0.23.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
