[tool.poetry]
authors = ["tqtensor <victortang212@gmail.com>"]
description = "SelfDebug with LLMs"
name = "self-debug"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
gdown = "^5.1.0"
langchain = "^0.1.7"
langchain-openai = "^0.0.6"
matplotlib = ">=3.5.2,<3.6.0"
numpy = ">=1.21.6,<1.22.0"
pandas = ">=1.3.5,<1.4.0"
pandas-datareader = ">=0.10.0,<0.11.0"
psutil = "^5.9.8"
python = "~3.8.10"
python-dotenv = "^1.0.1"
pyzstd = "^0.15.9"
scikit-learn = ">=1.0.2,<1.1.0"
scipy = ">=1.7.3,<1.8.0"
tensorflow = "2.10.0"
tensorflow-io-gcs-filesystem = "0.23.1"
torch = ">=1.12.1,<1.13.0"
transformers = ">=4.22.1,<4.23.0"
xgboost = ">=1.6.2,<1.7.0"
minio = "^7.2.5"
tiktoken = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
toml-sort = "^0.23.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
